cluster/apps/home/nas/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: home
subsets:
  - addresses:
      - ip: ${SVC_NAS_ADDR}
    ports:
      - name: https
        port: 5001
        protocol: TCP
