cluster/apps/home/nas/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: home
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 5001
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: home
subsets:
  - addresses:
      - ip: ${SVC_NAS_ADDR}
    ports:
      - name: https
        port: 5001
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nas
  namespace: home
  annotations:
    kubernetes.io/tls-acme: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "nas"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_ssl_server_name on;
       proxy_ssl_name nas.${SECRET_DOMAIN};
spec:
  ingressClassName: nginx
  tls:
    - secretName: nas-tls
      hosts:
        - nas.${SECRET_DOMAIN}
  rules:
    - host: nas.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nas
                port:
                  number: 5001
